#14: Fix title menu layout
I messed up the layout of the title menu a little in my last commit.
This also sets the "title" text of the doc title button to show the
title so you can view the entire title (if it's long) on hover.

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -332,8 +332,8 @@ button
             
             input
             {
-                width: 332px;
-                margin-left: 20px;
+                width: 362px;
+                margin-left: 5px;
                 margin-top: 10px;
                 padding: 12px;
                 border: 1px white solid;
@@ -351,6 +351,12 @@ button
                 border-bottom: 1px white solid;
                 margin-left: -@toolbarDropdownPadding;
                 margin-right: -@toolbarDropdownPadding;
+            }
+            
+            #title-save
+            {
+                width: 387px;
+                margin-left: 5px;                
             }
         }
                     
